# cc-claw

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEMO_SCRIPT.md  README.md  README_CN.md  README_EN.md  cli.py  design.md  pyproject.toml  requirements.txt  run_server.py  setup.cfg  test_image.py
cli/: __init__.py  __main__.py
client/: __init__.py  api.py  claude.py  collaboration.py  config.py  daemon.py  goal_engine.py  handler.py  hook_config.py  hook_server.py  memory.py  minimax.py  profile.py  retry.py  scheduler.py  task_queue.py  token_tracker.py  tools.py  websocket.py
community/: DISCORD_SETUP.md
outreach/: README.md
server/: __init__.py  config.py
server/api/: __init__.py  main.py
server/bot/: __init__.py  lark.py  telegram.py
server/models/: __init__.py  db.py  models.py
server/services/: __init__.py  pairing.py  redis.py  simple_storage.py  storage.py  tailscale.py
server/ws/: __init__.py  server.py
tests/: conftest.py  test_api.py  test_claude.py  test_collaboration.py  test_config.py  test_daemon.py  test_goal_engine.py  test_handler.py  test_hook_config.py  test_hook_server.py  test_memory.py  test_minimax.py  test_profile.py  test_retry.py  test_scheduler.py  test_task_queue.py  test_token_tracker.py  test_tools.py  test_websocket.py
